--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "cloudflare-express": "^1.0.1",
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "request-ip": "^2.1.3"
