--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "cloudflare-express": "^1.0.1",
     "express": "^4.17.1",
-    "pug": "^3.0.2",
-    "request-ip": "^2.1.3"
+    "pug": "^3.0.2"
   }
 }
