--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cloudflare-express": "^1.0.1",
     "express": "^4.17.1",
+    "express-favicon": "^2.0.4",
     "pug": "^3.0.2"
   }
 }
